--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
   </div>
   <main>
-    <section class="container padding-block-6 animate" data-type="narrow">
+    <section class="container margin-block-12 animate" data-type="narrow">
       <h2 class="text-center">
         Section Title
       </h2>
@@ -50,14 +50,14 @@
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit aliquid ut dolor beatae reprehenderit iste vel cum laboriosam pariatur fugit, odio cumque obcaecati delectus dignissimos numquam iure animi sint.
       </p>
     </section>
-    <section class="container padding-block-6 animate">
+    <section class="container margin-block-12 animate">
       <h2 class="text-center">
         Section Title
       </h2>
       <p class="text-center">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit aliquid ut dolor beatae reprehenderit iste vel cum laboriosam pariatur fugit, odio cumque obcaecati delectus dignissimos numquam iure animi sint.
       </p>
-      <div class="section__article grid-even-columns padding-block-6 animate">
+      <div class="section__article grid-even-columns margin-block-12 animate">
         <article class="article">
           <h3>Article Title</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit aliquid ut dolor beatae reprehenderit iste vel cum laboriosam pariatur fugit, odio cumque obcaecati delectus dignissimos numquam iure animi sint.</p>
@@ -68,7 +68,7 @@
         </article>        
       </div>
     </section>
-    <section class="container padding-block-6 animate">
+    <section class="container margin-block-12 animate">
       <h2 class="text-center">
         Section Title
       </h2>
